@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-04T16:32:55Z",
-  "count_outdated" : 648,
-  "uniques_outdated" : 336,
-  "count" : 679,
+  "timestamp" : "2022-07-05T02:13:48Z",
+  "count_outdated" : 650,
+  "uniques_outdated" : 337,
+  "count" : 680,
   "uniques" : 353,
   "clones" : [
-    {
-      "timestamp": "2022-06-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-23T00:00:00Z",
       "count": 2,
