@@ -1,3 +1,10 @@
+2022-07-05T02:13:48Z:
+* notice: last 14d: unq all: 5 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 336 648 / 353 679
+* notice: next accum: outdated-unq outdated-all / unq all: 337 650 / 353 680
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-06-20] / []
+
 2022-07-04T16:32:55Z:
 * notice: last 14d: unq all: 5 31
 * notice: prev accum: outdated-unq outdated-all / unq all: 336 648 / 353 678
